--- a/lab-08-blog/pom.xml
+++ b/lab-08-blog/pom.xml
@@ -113,6 +113,13 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
