--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,13 @@
                 <version>1.1.2</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>19.0</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
